--- a/package.json
+++ b/package.json
@@ -9,18 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@codemirror/commands": "^6.10.1",
-    "@codemirror/lang-sql": "^6.10.0",
-    "@codemirror/language": "^6.12.1",
-    "@codemirror/state": "^6.5.3",
-    "@codemirror/theme-one-dark": "^6.1.3",
-    "@codemirror/view": "^6.39.7",
+    "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
+    "monaco-editor": "^0.55.1",
     "next": "16.1.1",
     "node-sql-parser": "^5.3.13",
     "playwright": "^1.57.0",
