--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "monaco-editor": "^0.55.1",
     "next": "16.1.1",
     "node-sql-parser": "^5.3.13",
+    "openai": "^6.15.0",
     "playwright": "^1.57.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
