--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "playwright": "^1.57.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "sql-formatter": "^15.6.12",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
