--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.562.0",
     "monaco-editor": "^0.55.1",
     "next": "16.1.1",
+    "next-themes": "^0.4.6",
     "node-sql-parser": "^5.3.13",
     "openai": "^6.15.0",
     "playwright": "^1.57.0",
